2007-11-02  Glenn Morris  <rgm@gnu.org>

	* newcomment.el (comment-indent): Let comment-insert-comment-function,
	if defined, do all the work of inserting a new comment.

	* simple.el (bad-packages-alist): Revert previous change.

2007-11-02  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacs-lisp/lselect.el: Move to obsolete/lselect.el.

	* obsolete/lselect.el: Do not warn about unknown functions.

2007-11-02  Michael Olson  <mwolson@gnu.org>

	* textmodes/remember.el (remember-buffer): Make this an alias of
	remember-finalize, because Org uses it.

2007-11-01  Michael Olson  <mwolson@gnu.org>

	* textmodes/remember.el: Improve documentation in heading.
	(remember-before-remember-hook): Turn into a customizable option.
	(remember): Document INITIAL argument.
	(remember-region): Remove autoload cookie.  Improve docstring to
	mention that it is called from the *Remember* buffer, and does not
	have any functional overlap with the `remember' function.
	(remember-finalize): Remove autoload cookie.  Rename from
	remember-buffer to emphasize that this does not have any
	functional overlap with the `remember' function.
	(remember-destroy): Remove autoload cookie.
	(remember-mode-map): Define and initialize in one step.
	(remember-mode): Improve docstring.
	(remember-annotation-functions): Default to just '(buffer-file-name),
	and don't try to take the default value from Planner.

2007-11-01  Glenn Morris  <rgm@gnu.org>

	* doc-view.el (doc-view-cache-directory): Remove superfluous concat.

	* simple.el (bad-packages-alist): Add an entry for standalone vc-svn.

	* emacs-lisp/authors.el (authors-scan-change-log)
	(authors-scan-el): Don't enable local eval; enable only safe local
	variables, without querying.

	* mail/footnote.el (footnote-numeric-regexp)
	(footnote-english-upper-regexp, footnote-english-lower-regexp)
	(footnote-roman-lower-regexp, footnote-roman-upper-regexp):
	Match multi-character footnotes.

	* textmodes/nroff-mode.el (nroff-mode): Set indent-line-function.